# 2026_Capstone

./: .gitignore  README.md  config.example.json  main.go  main_test.go  mini-container  setup_build_tools.sh  setup_busybox_rootfs.sh  setup_onnx_model.sh  setup_onnxruntime_cpp.sh
ai/: CMakeLists.txt  README.md  inference_runner.cpp  prepare_model.py  requirements.txt
model-store/simple-classifier/1.0.0/: labels.json  manifest.json  model.onnx
scripts/: copy_runtime_dependencies.sh
tests/: test_cgroup_limits.sh  test_chroot_inference.sh  test_common.sh  test_cpu_limit.sh  test_host_inference.sh  test_memory_limit.sh  test_missing_model.sh  test_model_readonly.sh  test_runtime_inference.sh
